# bedridden

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
cmake/: FetchJUCE.cmake
docs/: DESIGN.md  UI.md
dsplib/: BedriddenDSP.cpp  BedriddenDSP.h  CMakeLists.txt
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
src/dsp/: Algorithm.h  BBSound.h  BBVoice.cpp  BBVoice.h  Oscillator.h
src/gui/: AlgorithmPanel.cpp  AlgorithmPanel.h  EnvelopePanel.cpp  EnvelopePanel.h  LookAndFeel.cpp  LookAndFeel.h  OscPanel.cpp  OscPanel.h  Scope.h
tests/: CMakeLists.txt  test_algorithms.cpp
